TBD - 1.8
- Improvement: Code updated to Qt 5.12.2.
- Bugfix: Some recently added ADIF fields where not properly imported from ADIF.
Improvement: VUCC_GRIDS & MY_VUCC_GRIDS are also managed in the UI.

July 2021 - 1.7
- Bugfix: RealTime remained checked when editing.
- Bugfix: Some Hamlib parameters were not properly stored.
- Bugfix: Coredump when no entity (Closes #302)
- Bugfix: Colors are now properly defined. (Closes #275) (Closes #40)
- Bugfix: Station callsign is read from the settings. (Closes #307)
- Bugfix: The right setup dialog tab is open on first start. (Closes #311)
- Improvement: DarkMode added. (TNX EA5WA) (Closes #56)
- Improvement: DXCC & WAZ management optimization.
- Improvement: Current UI data is saved before going to edit a QSO and restore after editing.
- Improvement: Order of widgets when tab is pressed has been improved. (Working on #265)
- Statistics: Added the Grids & DXCC per band statistic. (Closes #312), (Closes #313), (Closes #314)
- UI: The Setup menu has been moved to Settings into the File menu.
- Translations: Catalan (TNX Txema), Italian (TNX IU5HIU) & Spanish (EA4K).

June 2021 - 1.6
- Optimization: Isolated the QSO tab to an independent widget.
- Bugfix: When starting KLog for the first time, it crashed.
- Bugfix: Hamlib was not properly started on KLog start (closes #126) (TNX G4MKT)
- Bugfix: SAT_MODE was being added to non SAT QSOs.
- Bugfix: DXCC status was not being properly updated.
- Improvement: Added user selectable ADIF fields in the Other and My Data tabs. (Closes #4)
- Improvement: Enhanced how the UDP server is started on KLog start.
- Improvement: Added some basic SQL Injection protection to the UI. (Closes #95)
- Improvement: UI data is saved before entering the Setup and restored after setup is done. (Closes #188)
- Improvement: Only one instance of KLog is allowed to run simultaneously. (Closes #250) (TNX foldynl)
- Commented some Flawfinder false positives.